--- a/templates/search_words.html
+++ b/templates/search_words.html
@@ -21,9 +21,16 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <i class="si si-book-open fa-2x"></i>&nbsp; &nbsp;
-                        Dictionary
+                        <i class="si si-book-open fa-2x"></i>
                     </a>
+                </div>
+                <div id="nav-menu" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="#"><b>Dashboard</b></a></li>
+                    </ul>
                 </div>
             </div>
         </nav>
